force-app/main/default/objects/Lead/fields/Age_in_business_days__c.field-meta.xml
<CustomField>
    <fullName>Age_in_business_days__c</fullName>
    <formula>(5 * (FLOOR((TODAY() - DATE(1900,1,8))/7)) + MIN(5, MOD(TODAY() - DATE(1900,1,8), 7))) -
(5 * (FLOOR((DATEVALUE(CreatedDate) - DATE(1900,1,8))/7)) + 
MIN(5, MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 8), 7)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age(in business days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>