force-app/main/default/objects/Lead/fields/Agent_Notes__c.field-meta.xml
<CustomField>
    <fullName>Agent_Notes__c</fullName>
    <label>Agent Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>