force-app/main/default/objects/Lead/fields/Alcohol_Type__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_Type__c</fullName>
    <label>Alcohol Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEER</fullName>
            </value>
            <value>
                <fullName>BEER/WINE</fullName>
            </value>
            <value>
                <fullName>FULL BAR</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>WINE</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>