force-app/main/default/objects/Lead/fields/Aloha_Config_Center__c.field-meta.xml
<CustomField>
    <fullName>Aloha_Config_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Matt Upton</description>
    <label>Aloha Config Center</label>
    <type>Checkbox</type>
</CustomField>