force-app/main/default/objects/Lead/fields/Aloha_Guest_Manager__c.field-meta.xml
<CustomField>
    <fullName>Aloha_Guest_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Matt Upton</description>
    <label>Aloha Guest Manager</label>
    <type>Checkbox</type>
</CustomField>