force-app/main/default/objects/Lead/fields/Aloha_Key_ID__c.field-meta.xml
<CustomField>
    <fullName>Aloha_Key_ID__c</fullName>
    <label>Aloha Key ID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>