force-app/main/default/objects/Lead/fields/Aloha_Loyalty__c.field-meta.xml
<CustomField>
    <fullName>Aloha_Loyalty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Matt Upton</description>
    <label>Aloha Loyalty</label>
    <type>Checkbox</type>
</CustomField>