force-app/main/default/objects/Lead/fields/Aloha_Online_Ordering__c.field-meta.xml
<CustomField>
    <fullName>Aloha_Online_Ordering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Matt Upton</description>
    <label>Aloha Online Ordering</label>
    <type>Checkbox</type>
</CustomField>