force-app/main/default/objects/Lead/fields/Aloha_Stored_Value__c.field-meta.xml
<CustomField>
    <fullName>Aloha_Stored_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Matt Upton</description>
    <label>Aloha Stored Value</label>
    <type>Checkbox</type>
</CustomField>