force-app/main/default/objects/Lead/fields/Aloha_Takeout__c.field-meta.xml
<CustomField>
    <fullName>Aloha_Takeout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Matt Upton</description>
    <label>Aloha Takeout</label>
    <type>Checkbox</type>
</CustomField>