force-app/main/default/objects/Lead/fields/AssignToSalesRep__c.field-meta.xml
<CustomField>
    <fullName>AssignToSalesRep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AssignToSalesRep</label>
    <type>Checkbox</type>
</CustomField>