force-app/main/default/objects/Lead/fields/AssignToSalesRepDate__c.field-meta.xml
<CustomField>
    <fullName>AssignToSalesRepDate__c</fullName>
    <label>AssignToSalesRepDate</label>
    <type>DateTime</type>
</CustomField>