force-app/main/default/objects/Lead/fields/Average_Number_of_POS_Lanes_Per_Location__c.field-meta.xml
<CustomField>
    <fullName>Average_Number_of_POS_Lanes_Per_Location__c</fullName>
    <inlineHelpText>Please indicate the average number of Point of Sale Machines/Checkouts the Prospect has per Location</inlineHelpText>
    <label>Average Number of POS/Lanes Per Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-5</fullName>
            </value>
            <value>
                <fullName>5-10</fullName>
            </value>
            <value>
                <fullName>10-20</fullName>
            </value>
            <value>
                <fullName>20-30</fullName>
            </value>
            <value>
                <fullName>30+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>