force-app/main/default/objects/Lead/fields/Campaign_Trigger_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Trigger_Date__c</fullName>
    <label>Campaign Trigger Date</label>
    <type>DateTime</type>
</CustomField>