force-app/main/default/objects/Lead/fields/CampaignTrigger__c.field-meta.xml
<CustomField>
    <fullName>CampaignTrigger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Trigger</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads (Campaign Trigger)</relationshipLabel>
    <relationshipName>Lead_Associate</relationshipName>
    <type>Lookup</type>
</CustomField>