force-app/main/default/objects/Lead/fields/CardtronicsId__c.field-meta.xml
<CustomField>
    <fullName>CardtronicsId__c</fullName>
    <description>CATM</description>
    <externalId>true</externalId>
    <label>CardtronicsId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>