force-app/main/default/objects/Lead/fields/Case_Conversion_T_F__c.field-meta.xml
<CustomField>
    <fullName>Case_Conversion_T_F__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Conversion(T/F)</label>
    <type>Checkbox</type>
</CustomField>