force-app/main/default/objects/Lead/fields/CATM_Record__c.field-meta.xml
<CustomField>
    <fullName>CATM_Record__c</fullName>
    <description>CATM</description>
    <formula>IF(
OR(
TEXT(SubIndustry__c) = &quot;Aerospace &amp; Defense&quot;,
TEXT(SubIndustry__c) = &quot;ATM&quot;,
TEXT(SubIndustry__c) = &quot;Banking&quot;,
TEXT(SubIndustry__c) = &quot;Business Services&quot;,
TEXT(SubIndustry__c) = &quot;Gas Station&quot;,
TEXT(SubIndustry__c) = &quot;Education&quot;,
TEXT(SubIndustry__c) = &quot;Entertainment&quot;,
TEXT(SubIndustry__c) = &quot;Food &amp; Beverage&quot;,
TEXT(SubIndustry__c) = &quot;Game &amp; Gambling&quot;,
TEXT(SubIndustry__c) = &quot;Government&quot;,
TEXT(SubIndustry__c) = &quot;Healthcare&quot;,
TEXT(SubIndustry__c) = &quot;Recreation&quot;,
TEXT(SubIndustry__c) = &quot;Retail&quot;,
TEXT(SubIndustry__c) = &quot;Telecommunications&quot;,
TEXT(SubIndustry__c) = &quot;Travel&quot;,
TEXT(SubIndustry__c) = &quot;FMCG&quot;,
TEXT(SubIndustry__c) = &quot;Other&quot;,
AND (
ISPICKVAL(Industry__c,&apos;Payments &amp; Network&apos;),
ISBLANK(Text(SubIndustry__c))
)
),true,false)</formula>
    <label>CATM Record</label>
    <type>Checkbox</type>
</CustomField>