force-app/main/default/objects/Lead/fields/CATM_Region__c.field-meta.xml
<CustomField>
    <fullName>CATM_Region__c</fullName>
    <description>CATM</description>
    <label>CATM Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>