force-app/main/default/objects/Lead/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <label>Channel Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACME Cash Register</fullName>
            </value>
            <value>
                <fullName>Advanced Hospitality Systems</fullName>
            </value>
            <value>
                <fullName>All American Business Systems</fullName>
            </value>
            <value>
                <fullName>AM/PM Services Ltd.</fullName>
            </value>
            <value>
                <fullName>American Point of Sale</fullName>
            </value>
            <value>
                <fullName>Artex Cash Register</fullName>
            </value>
            <value>
                <fullName>BEC</fullName>
            </value>
            <value>
                <fullName>Bodnar Group Consulting</fullName>
            </value>
            <value>
                <fullName>Boise POS Solutions Inc</fullName>
            </value>
            <value>
                <fullName>Business Machines Company, Inc.</fullName>
            </value>
            <value>
                <fullName>Business Machine Systems Inc (BMS)</fullName>
            </value>
            <value>
                <fullName>Cardinal Business Equipment</fullName>
            </value>
            <value>
                <fullName>Cash Register Sales Services of Kalamazoo</fullName>
            </value>
            <value>
                <fullName>Cash Register Services, Inc. TX</fullName>
            </value>
            <value>
                <fullName>Cash Register Systems</fullName>
            </value>
            <value>
                <fullName>Cash Register Systems of El Paso</fullName>
            </value>
            <value>
                <fullName>CE Thomas Company</fullName>
            </value>
            <value>
                <fullName>COMDATA</fullName>
            </value>
            <value>
                <fullName>Computant (DataNet)</fullName>
            </value>
            <value>
                <fullName>Computer World Inc</fullName>
            </value>
            <value>
                <fullName>Cutting Edge Systems</fullName>
            </value>
            <value>
                <fullName>Datacom Network Consulting</fullName>
            </value>
            <value>
                <fullName>Data NorthWest</fullName>
            </value>
            <value>
                <fullName>Data Tech Ltd.</fullName>
            </value>
            <value>
                <fullName>DIR</fullName>
            </value>
            <value>
                <fullName>Dumac Business Systems</fullName>
            </value>
            <value>
                <fullName>EMS Enterprises</fullName>
            </value>
            <value>
                <fullName>Enterprise Merchant Solutions Inc</fullName>
            </value>
            <value>
                <fullName>Executive Network Technologies Inc</fullName>
            </value>
            <value>
                <fullName>F &amp; B Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>