force-app/main/default/objects/Lead/fields/Company_Annual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Company_Annual_Sales__c</fullName>
    <label>Company Annual Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0 - $1MM</fullName>
            </value>
            <value>
                <fullName>$1MM - $10MM</fullName>
            </value>
            <value>
                <fullName>$10MM - $50MM</fullName>
            </value>
            <value>
                <fullName>$50MM - $100MM</fullName>
            </value>
            <value>
                <fullName>$100MM - $250MM</fullName>
            </value>
            <value>
                <fullName>$250MM - $500MM</fullName>
            </value>
            <value>
                <fullName>$500MM - $1B</fullName>
            </value>
            <value>
                <fullName>$1B+</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>