force-app/main/default/objects/Lead/fields/Contract_Time_Remaining_in_mths__c.field-meta.xml
<CustomField>
    <fullName>Contract_Time_Remaining_in_mths__c</fullName>
    <description>CATM</description>
    <formula>(MONTH( Contract_End_Date__c ) + (12*(YEAR( Contract_End_Date__c )-YEAR(TODAY()))) - MONTH(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Time Remaining (in mths)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>