force-app/main/default/objects/Lead/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>County that the business resides in.</description>
    <label>County</label>
    <length>30</length>
    <type>Text</type>
</CustomField>