force-app/main/default/objects/Lead/fields/Cuisine__c.field-meta.xml
<CustomField>
    <fullName>Cuisine__c</fullName>
    <label>Cuisine</label>
    <length>30</length>
    <type>Text</type>
</CustomField>