force-app/main/default/objects/Lead/fields/Current_MRR__c.field-meta.xml
<CustomField>
    <fullName>Current_MRR__c</fullName>
    <description>Matt Upton</description>
    <label>Current MRR</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>