force-app/main/default/objects/Lead/fields/Days_between_MQL_and_SAL__c.field-meta.xml
<CustomField>
    <fullName>Days_between_MQL_and_SAL__c</fullName>
    <description>Calculate Days Between MQL Lead Stage Trigger date and SAL Lead Stage Trigger date</description>
    <formula>IF( AND(ISBLANK(MQL_Date__c),NOT(ISBLANK(SAL_Date__c)), NOT(ISBLANK(SQL_Date__c))) , DATEVALUE(SAL_Date__c) - DATEVALUE(INQ_Trigger_Date__c),
IF(AND(ISBLANK(MQL_Date__c),ISBLANK(SAL_Date__c), NOT(ISBLANK(SQL_Date__c))), DATEVALUE(SQL_Date__c) - DATEVALUE(INQ_Trigger_Date__c), 
IF(AND(NOT(ISBLANK(MQL_Date__c)),NOT(ISBLANK(SAL_Date__c)), ISBLANK(SQL_Date__c)), DATEVALUE(SAL_Date__c) - DATEVALUE(MQL_Date__c), 
IF(AND(NOT(ISBLANK(MQL_Date__c)),(ISBLANK(SAL_Date__c)), NOT(ISBLANK(SQL_Date__c))), DATEVALUE(SQL_Date__c) - DATEVALUE(MQL_Date__c),
IF(AND(ISBLANK(MQL_Date__c),NOT(ISBLANK(SAL_Date__c)), ISBLANK(SQL_Date__c)), DATEVALUE(SAL_Date__c) - DATEVALUE(INQ_Trigger_Date__c),
DATEVALUE(SAL_Date__c) - DATEVALUE(MQL_Date__c)) ) )))</formula>
    <label>Days between MQL and SAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>