force-app/main/default/objects/Lead/fields/Describe_impact_to_Customer_s_Business__c.field-meta.xml
<CustomField>
    <fullName>Describe_impact_to_Customer_s_Business__c</fullName>
    <label>Describe impact to Customer’s Business</label>
    <type>TextArea</type>
</CustomField>