force-app/main/default/objects/Lead/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <description>Reasons lead was disqualified</description>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Attrition – Product</fullName>
            </value>
            <value>
                <fullName>Attrition – Support</fullName>
            </value>
            <value>
                <fullName>Budget/Pricing</fullName>
            </value>
            <value>
                <fullName>Current NCR Customer</fullName>
            </value>
            <value>
                <fullName>Dispensary - Cannabis</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>End User Issue</fullName>
            </value>
            <value>
                <fullName>Event ATM Only</fullName>
            </value>
            <value>
                <fullName>Incomplete Information/Spam</fullName>
            </value>
            <value>
                <fullName>Job Seeker</fullName>
            </value>
            <value>
                <fullName>Job Seeker/Student -Prospect is either a job seeker or student</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>NCR Testing</fullName>
            </value>
            <value>
                <fullName>Not a viable prospect</fullName>
                <label>Not a Viable Prospect</label>
            </value>
            <value>
                <fullName>Not Ready for Upgrade</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Partner/Competitor -Lead is from an existing NCR Partner or our Competitor</fullName>
            </value>
            <value>
                <fullName>Prospect in Active Opportunity -Prospect has an Active Deal/Opportunity with NCR/Partner in progress</fullName>
            </value>
            <value>
                <fullName>Retailer Query/inquire-Device fault</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>Unverified</fullName>
            </value>
            <value>
                <fullName>Unverified (Bad Data/Spam) -Prospect’s contact info cannot be verified (fake contact info, out of business)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>