force-app/main/default/objects/Lead/fields/Disqualified_Reason_Comments__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason_Comments__c</fullName>
    <description>CATM</description>
    <label>Disqualified Reason Comments</label>
    <type>TextArea</type>
</CustomField>