force-app/main/default/objects/Lead/fields/DPV_Provider__c.field-meta.xml
<CustomField>
    <fullName>DPV_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The single DPV Provider for this Lead</inlineHelpText>
    <label>DPV Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Solution_Provider__c.DPV_Product_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Solution_Provider__c</referenceTo>
    <relationshipLabel>DPVProviders</relationshipLabel>
    <relationshipName>DPVProviders</relationshipName>
    <type>Lookup</type>
</CustomField>