force-app/main/default/objects/Lead/fields/DPV_Software__c.field-meta.xml
<CustomField>
    <fullName>DPV_Software__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The DPV Software used by the DPV Provider</inlineHelpText>
    <label>DPV Software</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Solution_Provider_Product__c.Solution_Provider_Id__c</field>
            <operation>equals</operation>
            <valueField>$Source.DPV_Provider__c</valueField>
        </filterItems>
        <filterItems>
            <field>Solution_Provider_Product__c.Product_Type__c</field>
            <operation>equals</operation>
            <value>Core Processing Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Solution_Provider_Product__c</referenceTo>
    <relationshipLabel>DPVProducts</relationshipLabel>
    <relationshipName>DPVProducts</relationshipName>
    <type>Lookup</type>
</CustomField>