force-app/main/default/objects/Lead/fields/FDIC__c.field-meta.xml
<CustomField>
    <fullName>FDIC__c</fullName>
    <description>For DI Sales Integration</description>
    <label>FDIC#</label>
    <length>10</length>
    <type>Text</type>
</CustomField>