force-app/main/default/objects/Lead/fields/FI_Type__c.field-meta.xml
<CustomField>
    <fullName>FI_Type__c</fullName>
    <description>For DI Sales Integration</description>
    <label>FI Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Credit Union</fullName>
            </value>
            <value>
                <fullName>Holding Company</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>DBA</fullName>
            </value>
            <value>
                <fullName>Federal Credit Union</fullName>
            </value>
            <value>
                <fullName>Savings &amp; Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>