force-app/main/default/objects/Lead/fields/Final_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Final_Decision_Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicate if the Prospect is the Final Decision Maker</inlineHelpText>
    <label>Final Decision Maker?</label>
    <type>Checkbox</type>
</CustomField>