force-app/main/default/objects/Lead/fields/Incumbent_POS_contract_expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_POS_contract_expiration_date__c</fullName>
    <description>Incumbent POS contract expiration date.</description>
    <inlineHelpText>Incumbent POS contract expiration date.</inlineHelpText>
    <label>Incumbent POS contract expiration date</label>
    <type>Date</type>
</CustomField>