force-app/main/default/objects/Lead/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <label>Industry Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BNK</fullName>
            </value>
            <value>
                <fullName>HOS</fullName>
            </value>
            <value>
                <fullName>RET</fullName>
            </value>
            <value>
                <fullName>TEL</fullName>
            </value>
            <value>
                <fullName>P&amp;N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>