force-app/main/default/objects/Lead/fields/Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Date__c</fullName>
    <description>Install date of the current system</description>
    <inlineHelpText>What was the install date of the current system?</inlineHelpText>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>